# dtknetworkmanager

./: CMakeLists.txt
.reuse/: dep5
debian/: changelog  control  rules
docs/: CMakeLists.txt  dnetworkmanager.zh_CN.dox  dnetworkmanagertypes.zh_CN.dox  index.zh_CN.md
examples/: devicedemo.cpp
include/: Devices  daccesspoint.h  dactiveconnection.h  dactivevpnconnection.h  dadsldevice.h  dagentmanager.h  dappproxy.h  dconnectionsetting.h  ddevice.h  ddhcp4config.h  ddhcp6config.h  demo.h  dgenericdevice.h  dipconflictcheck.h  dipv4config.h  dipv6config.h  dnetworkmanager.h  dnetworkmanagertypes.h  dsecretagent.h  dsettingsmanager.h  dsystemproxy.h  dtundevice.h  dwireddevice.h  dwirelessdevice.h  namespace.h
include/settings/: dadslsetting.h  dgenericsetting.h  dipv4setting.h  dipv6setting.h  dnmsetting.h  dsecurity8021xsetting.h  dtunsetting.h  dvpnsetting.h  dwiredsetting.h  dwirelesssecuritysetting.h  dwirelesssetting.h
misc/: DtkNetworkManagerConfig.cmake.in  dtknetworkmanager.pc.in  dtknetworkmanagerConfig.cmake.in  qt_lib_dtknetworkmanager.pri.in
src/: CMakeLists.txt  daccesspoint.cpp  daccesspoint_p.h  dactiveconnection.cpp  dactiveconnection_p.h  dactivevpnconnection.cpp  dactivevpnconnection_p.h  dadsldevice.cpp  dadsldevice_p.h  dagenmanager.cpp  dagentmanager_p.h  dappproxy.cpp  dappproxy_p.h  dconnectionsettting.cpp  dconnectionsettting_p.h  ddevice.cpp  ddevice_p.h  ddhcp4config.cpp  ddhcp4config_p.h  ddhcp6config.cpp  ddhcp6config_p.h  demo.cpp  dgenericdevice.cpp  dgenericdevice_p.h  dipconflictcheck.cpp  dipconflictcheck_p.h  dipv4config.cpp  dipv4config_p.h  dipv6config.cpp  dipv6config_p.h  dnetworkmanager.cpp  dnetworkmanager_p.h  dnmutils.h  dsecretagent.cpp  dsecretagent_p.h  dsettingsmanager_p.h  dsetttingsmanager.cpp  dsystemproxy.cpp  dsystemproxy_p.h  dtundevice.cpp  (+5 more)
src/dbus/: daccesspointinterface.cpp  daccesspointinterface.h  dactiveconnectioninterface.cpp  dactiveconnectioninterface.h  dactivevpnconnectioninterface.cpp  dactivevpnconnectioninterface.h  dadsldeviceinterface.cpp  dadsldeviceinterface.h  dagentmanagerinterface.cpp  dagentmanagerinterface.h  dappproxyinterface.cpp  dappproxyinterface.h  dconnectionsettinginterface.cpp  dconnectionsettinginterface.h  ddeviceInterface.h  ddeviceinterface.cpp  ddhcp4configinterface.cpp  ddhcp4configinterface.h  ddhcp6configinterface.cpp  ddhcp6configinterface.h  dgenericdeviceinterface.cpp  dgenericdeviceinterface.h  dipconflictcheckinterface.cpp  dipconflictcheckinterface.h  dipv4configinterface.cpp  dipv4configinterface.h  dipv6configinterface.cpp  dipv6configinterface.h  dnetworkmanagerinterface.cpp  dnetworkmanagerinterface.h  dsecretagentadaptor.h  dsecretagentinterface.cpp  dsecretagentinterface.h  dsettingsmanagerinterface.cpp  dsettingsmanagerinterface.h  dsystemproxyinterface.cpp  dsystemproxyinterface.h  dtundeviceinterface.cpp  dtundeviceinterface.h  dwireddeviceinterface.cpp  (+3 more)
src/settingsSrc/: dadslsetting.cpp  dgenericsetting.cpp  dnmsetting.cpp  dsecurity8021xsetting.cpp  dsecurity8021xsetting_p.h  dtunsetting.cpp  dvpnsetting.cpp  dwiredsetting.cpp  dwiredsetting_p.h  dwirelesssecuritysetting.cpp  dwirelesssetting.cpp
tests/: CMakeLists.txt  main.cpp  ut-adsldevice.cpp  ut-agentmanager.cpp  ut-appproxy.cpp  ut-dactivevpnconnection.cpp  ut-demo.cpp  ut-dnetworkmanager.cpp  ut-secretagent.cpp  ut-wirelessdevice.cpp
tests/fakeDBus/: agentmanagerservice.h  appproxyservice.h  connectionsettingservice.h  ipconfliccheckservice.h  networkmanagerservice.h  secretagentservice.h  settingsservice.h  systemproxyservice.h  wirelessdeviceservice.h
